feat: Improve error handling and UI responsiveness
Enhance error handling for Gemini API calls to specifically detect and report authentication errors. Introduce a dedicated `AUTH_ERROR` to trigger a modal for API key re-entry. Update viewport meta tags for better mobile scaling and add a descriptive meta tag. Adjust sidebar styling for improved visual hierarchy.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="description" content="The Inner Ear - Mick Goodrick과 Hal Galper의 철학을 담은 재즈 즉흥 연주 멘토링 AI. 뇌과학적 접근으로 연습의 방향을 제시합니다." />
     <title>The Inner Ear - Jazz Mentor</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
