--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "express": "https://aistudiocdn.com/express@^5.2.1",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5"
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://aistudiocdn.com/vite@^7.2.7",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
   }
 }
 </script>
